Support AOT on cpumodel example